// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AloitusKuulutus should create and manipulate projekti successfully 1`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": undefined,
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 2`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta sv.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus sv.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "Kunta.Kuntalainen@vayla.fi",
        "etunimi": "Kunta",
        "kunta": 536,
        "logo": "/suunnittelusopimus/logo.png",
        "puhelinnumero": "123456789",
        "sukunimi": "Kuntalainen",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "velho": Object {
        "asiatunnusELY": "ELY/1/2022",
        "asiatunnusVayla": "VAYLA/1/2022",
        "kunnat": Array [
          837,
          536,
        ],
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Kunta",
          "kunta": 536,
          "organisaatio": "Nokia",
          "puhelinnumero": "123456789",
          "sahkoposti": "Kunta.Kuntalainen@vayla.fi",
          "sukunimi": "Kuntalainen",
        },
        Object {
          "elyOrganisaatio": "PIRKANMAAN_ELY",
          "etunimi": "Eemil",
          "organisaatio": "ELY",
          "puhelinnumero": "123456789",
          "sahkoposti": "eemil.elylainen@ely.fi",
          "sukunimi": "Elylainen",
        },
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 3`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "palautusSyy": "Korjaa teksti",
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 4`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta sv.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus sv.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "Kunta.Kuntalainen@vayla.fi",
        "etunimi": "Kunta",
        "kunta": 536,
        "logo": "/suunnittelusopimus/logo.png",
        "puhelinnumero": "123456789",
        "sukunimi": "Kuntalainen",
      },
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "velho": Object {
        "asiatunnusELY": "ELY/1/2022",
        "asiatunnusVayla": "VAYLA/1/2022",
        "kunnat": Array [
          837,
          536,
        ],
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Kunta",
          "kunta": 536,
          "organisaatio": "Nokia",
          "puhelinnumero": "123456789",
          "sahkoposti": "Kunta.Kuntalainen@vayla.fi",
          "sukunimi": "Kuntalainen",
        },
        Object {
          "elyOrganisaatio": "PIRKANMAAN_ELY",
          "etunimi": "Eemil",
          "organisaatio": "ELY",
          "puhelinnumero": "123456789",
          "sahkoposti": "eemil.elylainen@ely.fi",
          "sukunimi": "Elylainen",
        },
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 5`] = `
Object {
  "aloitusKuulutus": Object {
    "hankkeenKuvaus": Object {
      "RUOTSI": "På svenska",
      "SUOMI": "Lorem Ipsum",
    },
    "id": 1,
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "yhteysHenkilot": Array [
        "A000124",
      ],
      "yhteysTiedot": Array [
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2022-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "aloituskuulutusPDFt": Object {
        "RUOTSI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta sv.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus sv.pdf",
        },
        "SUOMI": Object {
          "aloituskuulutusIlmoitusPDFPath": "/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/aloituskuulutus/1/T412 Aloituskuulutus.pdf",
        },
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På svenska",
        "SUOMI": "Lorem Ipsum",
      },
      "hyvaksyja": "A123",
      "hyvaksymisPaiva": "2022-11-04",
      "id": 1,
      "kielitiedot": Object {
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Namnet på svenska",
        "toissijainenKieli": "RUOTSI",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A000111",
      "siirtyySuunnitteluVaiheeseen": "2022-01-01",
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "Kunta.Kuntalainen@vayla.fi",
        "etunimi": "Kunta",
        "kunta": 536,
        "logo": "/suunnittelusopimus/logo.png",
        "puhelinnumero": "123456789",
        "sukunimi": "Kuntalainen",
      },
      "tila": "HYVAKSYTTY",
      "velho": Object {
        "asiatunnusELY": "ELY/1/2022",
        "asiatunnusVayla": "VAYLA/1/2022",
        "kunnat": Array [
          837,
          536,
        ],
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "etunimi": "Kunta",
          "kunta": 536,
          "organisaatio": "Nokia",
          "puhelinnumero": "123456789",
          "sahkoposti": "Kunta.Kuntalainen@vayla.fi",
          "sukunimi": "Kuntalainen",
        },
        Object {
          "elyOrganisaatio": "PIRKANMAAN_ELY",
          "etunimi": "Eemil",
          "organisaatio": "ELY",
          "puhelinnumero": "123456789",
          "sahkoposti": "eemil.elylainen@ely.fi",
          "sukunimi": "Elylainen",
        },
        Object {
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 6`] = `
Object {
  "args": Array [
    Object {
      "DistributionId": "unit-test-distribution-id",
      "InvalidationBatch": Object {
        "CallerReference": "***unittest***",
        "Paths": Object {
          "Items": Array [
            "/tiedostot/suunnitelma/1/*",
          ],
          "Quantity": 1,
        },
      },
    },
    Object {
      "DistributionId": "unit-test-distribution-id",
      "InvalidationBatch": Object {
        "CallerReference": "***unittest***",
        "Paths": Object {
          "Items": Array [
            "/tiedostot/suunnitelma/1/aloituskuulutus/*",
          ],
          "Quantity": 1,
        },
      },
    },
    Object {
      "DistributionId": "unit-test-distribution-id",
      "InvalidationBatch": Object {
        "CallerReference": "***unittest***",
        "Paths": Object {
          "Items": Array [
            "/tiedostot/suunnitelma/1/suunnittelusopimus/*",
          ],
          "Quantity": 1,
        },
      },
    },
  ],
  "stub": "createInvalidation",
}
`;

exports[`AloitusKuulutus should create and manipulate projekti successfully 7`] = `
Array [
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää ELY/1/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
Testiprojekti 1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "pekka.projari@vayla.fi",
    ],
  },
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää ELY/1/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
Testiprojekti 1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "pekka.projari@vayla.fi",
    ],
  },
  Object {
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ELY/1/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
Testiprojekti 1
aloituskuulutus on hyväksytty.
Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1/aloituskuulutus
Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen laatijaksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": "mikko.haapamaki@cgi.com",
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "T412 Aloituskuulutus.pdf",
      },
    ],
    "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ELY/1/2022",
    "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
Testiprojekti 1
aloituskuulutus on hyväksytty. Liitteenä aloituskuulutus PDF-tiedostona, muistathan viedä sen asiakirjanhallintaan.

Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1/aloituskuulutus

Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
    "to": Array [
      "pekka.projari@vayla.fi",
    ],
  },
  Object {
    "attachments": Array [
      Object {
        "contentType": "application/pdf",
        "filename": "T412_1 Ilmoitus aloituskuulutuksesta.pdf",
      },
      Object {
        "contentType": "application/pdf",
        "filename": "T412_1 Ilmoitus aloituskuulutuksesta sv.pdf",
      },
    ],
    "cc": Array [
      "pekka.projari@vayla.fi",
    ],
    "subject": "Ilmoitus Uudenmaan ELY-keskuksen kuulutuksesta",
    "text": "Tämä viesti on lähetetty Valtion liikenneväylien suunnittelu -järjestelmästä, älä vastaa tähän viestiin.

Testiprojekti 1

Nokia ilmoittaa, että se julkaisee kuulutuksen, joka koskee otsikossa mainitun tiesuunnitelman ja maastotöiden aloittamista. Nokia saattaa asian tiedoksi julkisesti kuuluttamalla vähintään 30 päivän ajan siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen vähintään yhdessä alueella yleisesti ilmestyvässä sanomalehdessä. (LjMTL 108§, HL 62 a §)

Kuulutus julkaistaan 2.1.2022 osoitteessa https://localhost:3000/suunnitelma/1/aloituskuulutus.

Suunnittelualueen kuntia pyydetään julkaisemaan liitteenä oleva ilmoitus kuulutuksesta verkkosivuillaan. Ilmoitus tulee julkaista mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä. Ilmoituksen nähtävillä oloa ei tarvitse todentaa ilmoituksen lähettäjälle. Ilmoitus menee ELY-keskuksen ja Väyläviraston kuulutussivulle automaattisesti Valtion liikenneväylien suunnittelu palvelun kautta.

Lorem Ipsum

Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.ely-keskus.fi/tietosuoja.

Lisätietoja antaa 

Nokia, Kunta Kuntalainen, puh. 123456789, Kunta.Kuntalainen@vayla.fi

Pirkanmaan ELY-keskus, Eemil Elylainen, puh. 123456789, eemil.elylainen@ely.fi

Kajaani, Marko Koi, puh. 0293121213, markku.koi@koi.com

Detta meddelande har skickats från Planering av statens trafikleder, vänligen svara inte på detta.

Namnet på svenska

Nokia meddelar om publiceringen av en kungörelse som gäller inledande av den vägplan som nämns i rubriken samt terrängarbeten. Nokia delger ärendet offentligt genom kungörelse under minst 30 dagar på det sätt som föreskrivs om offentlig kungörelse i förvaltningslagen samt genom att publicera kungörelsen i flera dagstidningar med allmän spridning på området. (108 § i lagen om trafiksystem och landsvägar och 62 a § i förvaltningslagen)

Kungörelsen publiceras 2.1.2022 på adressen https://localhost:3000/sv/suunnitelma/1/nahtavillaolo.

Kommunerna i planeringsområdet ombeds publicera det bifogade meddelandet om kungörelse på sin webbplats. Meddelandet ska i mån av möjlighet publiceras den ovan nämnda dagen då kungörelsen publiceras. Man behöver inte bekräfta för avsändaren att meddelandet är framlagt. Meddelandet kommer automatiskt upp på NTM-centralens och Trafikledsverkets kungörelsesida via tjänsten Planering av statens trafikleder. 

På svenska

NTM-centralen i Nyland behandlar personuppgifter som är nödvändiga för utarbetandet av planen. Om du vill veta mer om trafikledsplaneringens dataskyddspolicy, bekanta dig med sektionen om dataskydd på webbplatsen https://www.ely-keskus.fi/tietosuoja

Mer information om planen 

Nokia, Kunta Kuntalainen, puh. 123456789, Kunta.Kuntalainen@vayla.fi

NTM-centralen i Birkaland, Eemil Elylainen, puh. 123456789, eemil.elylainen@ely.fi

Kajaani, Marko Koi, puh. 0293121213, markku.koi@koi.com",
    "to": Array [],
  },
]
`;
